# SenshiTheAssembler

./: CMakeLists.txt  README.md  build.sh
include/assembler/: conversions.h  opTab.h  pass1.h  pass2.h  symTab.h
include/lexer/: instruction.h  lexer.h
src/assembler/: conversions.cpp  pass1.cpp  pass2.cpp
src/lexer/: instruction.cpp  lexer.cpp  test.asm
src/main/: main.cpp
